完善新增的页面

--- a/css/support.less
+++ b/css/support.less
@@ -34,28 +34,40 @@
   }
 }
 
-.supportPageMainBottom{
+.supportPageMainBottom {
   margin-bottom: 40px;
-  .container{
-    h2{
+  padding-top: 40px;
+
+  .container {
+    h2 {
       color: #339900;
       font-size: 20px;
       font-weight: 800;
     }
-    .supportPageMainBottomP{
-      span{
-        font-weight: 800;font-size:16px;height:40px;line-height: 40px;
+
+    .supportPageMainBottomP {
+      span {
+        font-weight: 800;
+        font-size: 16px;
+        height: 40px;
+        line-height: 40px;
       }
-      p{
-        color:black;font-size: 12px;margin-bottom:40px;
+
+      p {
+        color: black;
+        font-size: 12px;
+        margin-bottom: 40px;
       }
     }
-    .supportPageMainBottomImg{
-      padding:20px;
-      img{
-        width:100%;
+
+    .supportPageMainBottomImg {
+      padding: 20px;
+
+      img {
+        width: 100%;
       }
     }
+
     p {
       color: #339900;
       font-size: 20px;
