--- a/css/style.css
+++ b/css/style.css
@@ -896,6 +896,7 @@ figure.effect-chico:hover p {
 /*-- footer --*/
 footer {
     background: #292a2c;
+    margin-top: 2em;
 }
 
 .footer-left h3 {
@@ -970,7 +971,7 @@ footer {
     color: #FFFFFF;
     font-size: 1.5em;
     font-weight: 600;
-    margin: 0 0 1em 0;
+    /*margin: 0 0 1em 0;*/
     font-family: 'Raleway', sans-serif;
 }
 
@@ -996,6 +997,7 @@ footer {
 
 .footer-grid-left {
     padding-left: 0;
+    padding-top: 1em;
 }
 
 .footer-left p {
