--- a/css/single.less
+++ b/css/single.less
@@ -31,9 +31,11 @@
             font-size: 1.5em;
             vertical-align: middle;
             cursor: pointer;
+            color:#F44336;
           }
           .attention-mes{
             vertical-align: middle;
+            color:#F44336;
           }
           .apply-btn{
             padding: 1px 11px;
