--- a/css/publish.less
+++ b/css/publish.less
@@ -11,7 +11,13 @@
           width: 4em;
         }
         #drop_area{
-          height: 200px;
+          height:178px;
+          #preview{
+            img{
+              height:178px;
+            }
+
+          }
         }
       }
     }
