--- a/css/good.less
+++ b/css/good.less
@@ -25,112 +25,7 @@
 //轮播图旁边的导航栏样式
 #aside {
   position: relative;
-  //overflow: hidden;
-  #main-left {
-    font-size: 0.8em;
-    float: left;
-    background: rgba(0, 0, 0, .5);
-    width: 19.0709046%;
-    padding: 1% 0px;
-    /*height:420px; //380*/
-    //height: 100%;
-    position: absolute;
-    z-index: 1;
-    box-sizing: border-box;
-    left: -17%;
-
-    &:hover {
-      left: 0;
-    }
-
-    .category-list {
-      .category-list-li {
-        list-style: none;
-        color: #fff;
-        padding: 5.3% 10%;
-        box-sizing: border-box;
-
-        a {
-          color: white;
-          text-decoration: none;
-        }
-
-        &:hover {
-          background: #FF6700;
-          cursor: pointer;
-
-          .contents {
-            display: block;
-            color: #000;
-          }
-        }
-
-        .contents {
-          height: 100%;
-          width: 100%;
-          position: absolute;
-          left: 100%;
-          top: 0px;
-          z-index: 1;
-          display: none;
-
-          .good-list {
-            height: 100%;
-            width: 270px;
-            display: inline-block;
-            float: left;
-            background: #fff;
-            border-top: solid #ccc 1px;
-            box-shadow: 5px 8px 6px rgba(0, 0, 0, 0.2);
-            position: absolute;
-            left: 0;
-            top: 0px;
-            overflow-y: hidden;
-
-
-            .btn {
-              float: right;
-              display: inline-block;
-              width: 60px;
-              height: 22px;
-              border: solid #FF6700 1px;
-              color: #ff6700;
-              line-height: 22px;
-              text-align: center;
-              margin-top: 8px;
-              padding:0 0 0 0;
-            }
-
-            li {
-              margin-bottom: 50px;
-              list-style: none;
-              padding: 0 26px 0 30px;
-            }
-
-            li:first-child {
-              margin-top: 36px;
-            }
-
-            img {
-              width: 40px;
-              height: 40px;
-              background: #000;
-              vertical-align: middle;
-              margin-right: 10px;
-              float: left;
-            }
-          }
-
-          .good-list:nth-of-type(2) {
-            left: 100%;
-          }
-
-          .good-list:nth-of-type(3) {
-            left: 200%;
-          }
-        }
-      }
-    }
-
+  .container{
+    display:flex;
   }
 }
