--- a/css/publish.css
+++ b/css/publish.css
@@ -14,4 +14,35 @@
 .publish-top .container .publishContent .form-group #drop_area #preview img {
   height: 178px;
 }
+.publish-top .container .publishContent .hvr-glow {
+  color: #3c763d;
+  text-decoration: none;
+  display: block;
+  width: 19em;
+  text-align: center;
+  height: 2.5em;
+  line-height: 2.5em;
+  margin: 2em auto;
+  border: 1px solid #3c763d;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow;
+  transition-property: box-shadow;
+}
+.publish-top .container .publishContent .hvr-glow:hover {
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+}
+.publish-top .container .publishContent .hvr-glow:focus {
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+}
+.publish-top .container .publishContent .hvr-glow:active {
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+}
 /*# sourceMappingURL=publish.css.map */
