--- a/css/goodnav.css
+++ b/css/goodnav.css
@@ -160,6 +160,7 @@ body.hc_list .hc_lnav .allbtn ul {
 .hc_lnav .allbtn ul li dl {
     zoom: 1;
     color: gray;
+    padding-left: 10px;
     clear: both;
     overflow: auto;
     padding-top: 4px
@@ -181,7 +182,6 @@ body.hc_list .hc_lnav .allbtn ul {
 
 .hc_lnav .allbtn ul li dt {
     padding-left: 10px;
-    width: 30px;
     float: left;
     padding-top: 1px
 }
