--- a/css/style.css
+++ b/css/style.css
@@ -472,7 +472,7 @@ ul.dropdown-menu {
 }
 
 .rslides img {
-    height: auto;
+    height: 40em;
     border: 0;
 }
 
@@ -526,13 +526,26 @@ ul.dropdown-menu {
 
 /*-- //slider --*/
 /*-- banner-bottom --*/
-.welcome, .services, .news, footer, .team, .codes, .typography, .gallery, .blog, .contact-top {
+.welcome, .services, footer, .team, .codes, .typography, .gallery, .blog, .contact-top {
     /*padding: 4em 0;*/
 }
+.news{
+    padding: 4em 0;
+}
 
-.w3ls-heading h2, .w3ls-heading h3, .agileits-about-top-heading h3 {
+.agileits-about-top-heading h3 {
     color: #2f2f2f;
     font-size: 2em;
+    font-size: 2em;
+    height:2em;
+    margin: 0;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 600;
+}
+.w3ls-heading h2{
+    color: #2f2f2f;
+
+    line-height: 2em;
     margin: 0;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
@@ -796,7 +809,7 @@ figure.effect-chico:hover p {
 /*-- //services --*/
 /*-- news --*/
 .w3-agileits-news-grids {
-    margin: 4em 0 0 0;
+    /*margin: 4em 0 0 0;*/
 }
 
 .w3-agile-news-date {
@@ -890,6 +903,11 @@ figure.effect-chico:hover p {
 
 .news-right-grid:nth-child(2) {
     margin: 1em 0;
+}
+
+#giveALike {
+    color: orangered;
+    font-size: 2em;
 }
 
 /*-- //news --*/
@@ -1192,6 +1210,7 @@ footer {
 
 .agile_team_grid_main img {
     width: 100%;
+    height:100%;
 }
 
 .agile_team_grid_main .p-mask {
@@ -1906,7 +1925,7 @@ figure.effect-apollo:hover p {
 }
 
 .blog-left-left a img {
-    width: 100%;
+    width:40em;
 }
 
 .blog-left-right p {
@@ -1921,7 +1940,7 @@ ul.pagination {
 }
 
 .blog-top-left-grid {
-    float: right;
+    /*float: right;*/
 }
 
 .blog-top-right-grid {
@@ -2366,8 +2385,15 @@ ul.pagination {
         margin: 0 .5em;
     }
 
-    .w3ls-heading h2, .w3ls-heading h3, .agileits-about-top-heading h3 {
+    .w3ls-heading h3, .agileits-about-top-heading h3 {
         font-size: 3em;
+    }
+
+    .w3ls-heading h2 {
+        font-size: 3em;
+        height: 2em;
+        line-height: 2em;
+        text-align: center;
     }
 
     .agileits-left {
