--- a/css/logRegister.css
+++ b/css/logRegister.css
@@ -3,186 +3,6 @@
   box-sizing: border-box;
   padding-top: 20px;
 }
-#log_body {
-  height: 100vh;
-  background: url('../images/1.jpg');
-  background-size: 100% 100%;
-  position: relative;
-}
-#log_body #log_body_log {
-  width: 360px;
-  height: 390px;
-  background: white;
-  position: absolute;
-  right: 73px;
-  top: 77px;
-}
-#log_body #log_body_log #log_username_tip {
-  width: 170px;
-  height: 20px;
-  position: absolute;
-  top: 101px;
-  left: 52px;
-  color: red;
-  font-size: 12px;
-}
-#log_body #log_body_log #log_password_tip {
-  width: 170px;
-  height: 20px;
-  font-size: 12px;
-  position: absolute;
-  top: 161px;
-  left: 53px;
-  color: red;
-}
-#log_body #log_body_log h4 {
-  height: 50px;
-  background: #39f;
-  font-size: 20px;
-  text-align: center;
-  width: 100%;
-  line-height: 50px;
-  color: white;
-  font-weight: 700;
-}
-#log_body #log_body_log span:nth-of-type(1) {
-  width: 55px;
-  height: 55px;
-  position: absolute;
-  top: 0;
-  right: 0;
-  background: white;
-}
-#log_body #log_body_log span:nth-of-type(1) i:nth-of-type(1) {
-  width: 30px;
-  height: 30px;
-  display: block;
-  top: 7px;
-  left: 16px;
-  background: url('../images/img/log/iconfont-erweima-(2).png');
-  position: absolute;
-}
-#log_body #log_body_log span:nth-of-type(1) i:nth-of-type(2) {
-  cursor: pointer;
-  display: block;
-  border: 25px solid #39f;
-  position: absolute;
-  border-color: transparent transparent #39f #39f;
-}
-#log_body #log_body_log input[type='text'] {
-  width: 310px;
-  height: 40px;
-  box-sizing: border-box;
-  border: 1px solid lightgray;
-  text-indent: 35px;
-  margin-left: 25px;
-  margin-top: 11px;
-  margin-bottom: 9px;
-}
-#log_body #log_body_log .username_i {
-  width: 22px;
-  height: 22px;
-  display: block;
-  top: 70px;
-  left: 35px;
-  background: url('../images/img/log/entertext_0.png');
-  background-size: 100% 100%;
-  position: absolute;
-}
-#log_body #log_body_log input[type='password'] {
-  width: 310px;
-  height: 40px;
-  box-sizing: border-box;
-  border: 1px solid lightgray;
-  text-indent: 35px;
-  margin-left: 25px;
-  margin-top: 11px;
-  margin-bottom: 15px;
-}
-#log_body #log_body_log .password_i {
-  width: 22px;
-  height: 22px;
-  display: block;
-  top: 129px;
-  left: 36px;
-  background: url('../images/img/log/enterpasword_0.png');
-  background-size: 100% 100%;
-  position: absolute;
-}
-#log_body #log_body_log input[type='checkbox'] {
-  margin-left: 25px;
-}
-#log_body #log_body_log .forget_passw {
-  cursor: pointer;
-  float: right;
-  margin-right: 30px;
-}
-#log_body #log_body_log input[type='button'] {
-  background-color: #39f;
-  border-color: #39f;
-  cursor: pointer;
-  margin-left: 25px;
-  width: 310px;
-  height: 40px;
-  font-size: 18px;
-  color: white;
-  margin-top: 25px;
-  border-radius: 3px;
-  line-height: 40px;
-  text-align: center;
-}
-#log_body #log_body_log p:nth-of-type(1) {
-  width: 310px;
-  margin-left: 25px;
-  height: 50px;
-  line-height: 50px;
-  text-align: right;
-  font-size: 12px;
-}
-#log_body #log_body_log p:nth-of-type(1) a {
-  cursor: pointer;
-  color: #00a5e3;
-  font-size: 13px;
-}
-#log_body #log_body_log p:nth-of-type(2) {
-  width: 310px;
-  margin-left: 25px;
-  height: 40px;
-  line-height: 50px;
-  font-size: 13px;
-}
-#log_body #log_body_log span {
-  font-size: 13px;
-}
-#log_body #log_body_log span:nth-of-type(3) {
-  cursor: pointer;
-  margin-left: 39px;
-}
-#log_body #log_body_log span:nth-of-type(3) i {
-  width: 16px;
-  height: 16px;
-  display: inline-block;
-  background: url('../images/img/log/b_2.png');
-  background-size: 100% 100%;
-  position: absolute;
-  bottom: 18px;
-  left: 24px;
-}
-#log_body #log_body_log span:nth-of-type(4) {
-  cursor: pointer;
-  margin-left: 19px;
-}
-#log_body #log_body_log span:nth-of-type(4) i {
-  width: 16px;
-  height: 16px;
-  display: inline-block;
-  background: red;
-  background: url('../images/img/log/b_3.png');
-  background-size: 100% 100%;
-  position: absolute;
-  bottom: 18px;
-  left: 67px;
-}
 hr {
   border: none;
   height: 2px;
@@ -197,6 +17,76 @@ hr {
   margin: 0 auto;
   margin-top: 20px;
   position: relative;
+}
+#register_body #register_body_register #register_signature {
+  margin-left: 70px;
+  width: 330px;
+}
+#register_body #register_body_register #wordStatuslist,
+#register_body #register_body_register #wordStatuslist1,
+#register_body #register_body_register #wordStatuslist2,
+#register_body #register_body_register #wordStatuslist3,
+#register_body #register_body_register #wordStatuslist4,
+#register_body #register_body_register #wordStatuslist5,
+#register_body #register_body_register #wordStatuslist6 {
+  background: white;
+  display: inline-block;
+}
+#register_body #register_body_register #wordStatuslist ul,
+#register_body #register_body_register #wordStatuslist1 ul,
+#register_body #register_body_register #wordStatuslist2 ul,
+#register_body #register_body_register #wordStatuslist3 ul,
+#register_body #register_body_register #wordStatuslist4 ul,
+#register_body #register_body_register #wordStatuslist5 ul,
+#register_body #register_body_register #wordStatuslist6 ul {
+  display: flex;
+}
+#register_body #register_body_register #wordStatuslist ul li,
+#register_body #register_body_register #wordStatuslist1 ul li,
+#register_body #register_body_register #wordStatuslist2 ul li,
+#register_body #register_body_register #wordStatuslist3 ul li,
+#register_body #register_body_register #wordStatuslist4 ul li,
+#register_body #register_body_register #wordStatuslist5 ul li,
+#register_body #register_body_register #wordStatuslist6 ul li {
+  list-style: none;
+}
+#register_body #register_body_register #wordStatuslist ul li .iradio_minimal-purple,
+#register_body #register_body_register #wordStatuslist1 ul li .iradio_minimal-purple,
+#register_body #register_body_register #wordStatuslist2 ul li .iradio_minimal-purple,
+#register_body #register_body_register #wordStatuslist3 ul li .iradio_minimal-purple,
+#register_body #register_body_register #wordStatuslist4 ul li .iradio_minimal-purple,
+#register_body #register_body_register #wordStatuslist5 ul li .iradio_minimal-purple,
+#register_body #register_body_register #wordStatuslist6 ul li .iradio_minimal-purple {
+  background: white;
+}
+#register_body #register_body_register #wordStatuslist ul li label,
+#register_body #register_body_register #wordStatuslist1 ul li label,
+#register_body #register_body_register #wordStatuslist2 ul li label,
+#register_body #register_body_register #wordStatuslist3 ul li label,
+#register_body #register_body_register #wordStatuslist4 ul li label,
+#register_body #register_body_register #wordStatuslist5 ul li label,
+#register_body #register_body_register #wordStatuslist6 ul li label {
+  width: 40px;
+  text-align: left;
+}
+#register_body #register_body_register #wordStatuslist2 ul li label {
+  width: 80px;
+}
+#register_body #register_body_register #wordStatuslist4 ul li label {
+  width: 80px;
+}
+#register_body #register_body_register #wordStatuslist6 ul li label {
+  width: 62px;
+}
+#register_body #register_body_register #imgLabel {
+  margin-top: 0;
+}
+#register_body #register_body_register #headImg {
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  border: 1px gray solid;
+  vertical-align: top;
 }
 #register_body #register_body_register h3 {
   font-size: 23px;
@@ -234,6 +124,10 @@ hr {
   color: white;
   font-weight: 700;
   cursor: pointer;
+}
+#register_body #register_body_register input[type="radio"] {
+  width: 17px;
+  height: 17px;
 }
 #register_body #register_body_register #phone_tip {
   position: absolute;
